--- a/src/app/authorization/components/login/login.component.scss
+++ b/src/app/authorization/components/login/login.component.scss
@@ -1,3 +1,24 @@
+@use '../../../../assets/style/variables';
+
+.outside-box {
+  position: relative;
+}
+
+.outside-box__colorful {
+  width: 350px;
+  height: 114%;
+  position: absolute;
+  top: -25px;
+  left: calc(50% - 230px);
+  margin-left: 23px;
+  opacity: 0.8;
+  margin: 0 auto;
+  background: #9d0208;
+  align-self: center;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px 2px rgb(0 0 0 / 20%);
+}
+
 .login-container {
   max-width: 400px;
   justify-content: center;
