Create wiremock responses, test guard and auth service

--- a/src/app/authorization/components/login/login.component.html
+++ b/src/app/authorization/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="outside-box">
+<div *ngIf="canShowComponent" class="outside-box">
   <div class="outside-box__colorful"></div>
 
   <div class="card login-container">
