--- a/src/app/authorization/components/login/login.component.scss
+++ b/src/app/authorization/components/login/login.component.scss
@@ -13,7 +13,7 @@
   margin-left: 23px;
   opacity: 0.8;
   margin: 0 auto;
-  background: #9d0208;
+  background: variables.$red;
   align-self: center;
   border-radius: 10px;
   box-shadow: 2px 2px 10px 2px rgb(0 0 0 / 20%);
