--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -20,5 +20,7 @@
         <a class="nav-link" routerLink="/management/profiles">Profiles</a>
       </li>
     </ul>
+
+    <button (click)="logout()" class="btn btn-outline-light my-2 my-sm-0" type="submit">Logout</button>
   </div>
 </nav>
