--- a/src/app/management/user/components/user-list/user-list.component.scss
+++ b/src/app/management/user/components/user-list/user-list.component.scss
@@ -1,3 +1,9 @@
+.add-button {
+  display: flex;
+  justify-content: end;
+  margin-bottom: 30px;
+}
+
 .user-list {
   display: flex;
   justify-content: center;
