--- a/src/app/management/user/components/user-table/user-table.component.html
+++ b/src/app/management/user/components/user-table/user-table.component.html
@@ -7,7 +7,7 @@
       <th scope="col">Super</th>
       <th scope="col">Ativo</th>
       <th scope="col">Excluir</th>
-      <th scope="col">Detalhes</th>
+      <th scope="col">Editar</th>
     </tr>
   </thead>
   <tbody>
@@ -24,7 +24,7 @@
       </td>
 
       <td>
-        <button type="button" class="btn btn-outline-dark"><i class="bi bi-grid"></i></button>
+        <button (click)="onEdit(user)" type="button" class="btn btn-outline-dark"><i class="bi bi-pen"></i></button>
       </td>
     </tr>
   </tbody>
