--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -13,11 +13,21 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/management/users">Users</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/management/profiles">Profiles</a>
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          href="#"
+          id="navbarDropdown"
+          role="button"
+          data-toggle="dropdown"
+          aria-expanded="false">
+          Gerenciamento
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" routerLink="/management/users">Users</a>
+          <!-- <div class="dropdown-divider"></div> -->
+          <a class="dropdown-item" routerLink="/management/profiles">Profiles</a>
+        </div>
       </li>
     </ul>
 
