--- a/src/app/management/user/components/user-details/user-details.component.html
+++ b/src/app/management/user/components/user-details/user-details.component.html
@@ -1,1 +1,5 @@
-<p>user-details works!</p>
+<div class="details-actions">
+  <button (click)="goBack()" class="btn btn-dark" type="submit">Voltar</button>
+</div>
+
+<app-alert></app-alert>
