--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -24,9 +24,9 @@
           Gerenciamento
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" routerLink="/management/users">Users</a>
+          <a class="dropdown-item" routerLink="/management/users">Usuários</a>
           <!-- <div class="dropdown-divider"></div> -->
-          <a class="dropdown-item" routerLink="/management/profiles">Profiles</a>
+          <a class="dropdown-item" routerLink="/management/profiles">Perfis</a>
         </div>
       </li>
     </ul>
