--- a/src/app/management/user/components/user-details/user-details.component.scss
+++ b/src/app/management/user/components/user-details/user-details.component.scss
@@ -1,2 +1,60 @@
 .details-actions {
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+
+  h2 {
+    display: inline;
+    margin-left: 20px;
+  }
+}
+
+.user-details__button {
+  grid-column: 1 / 3;
+  display: flex;
+  justify-content: center;
+}
+
+.user-details__form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+.checkbox_container {
+  grid-column: 1 / 3;
+}
+
+.spinner-box {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.user-details__input:nth-child(1) {
+  grid-column: 1 / 3;
+}
+.user-details__input:nth-child(6) {
+  grid-column: 1 / 3;
+}
+
+@media (max-width: 576px) {
+  .user-details__form {
+    grid-template-columns: 100%;
+
+    .checkbox_container {
+      grid-column: 1 / 2;
+    }
+
+    .user-details__button {
+      grid-column: 1 / 2;
+    }
+
+    .user-details__input:nth-child(1) {
+      grid-column: 1 / 2;
+    }
+    .user-details__input:nth-child(6) {
+      grid-column: 1 / 2;
+    }
+  }
 }
