--- a/src/app/management/user/components/user-table/user-table.component.html
+++ b/src/app/management/user/components/user-table/user-table.component.html
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <th scope="col">Nome</th>
-      <th scope="col">Username</th>
+      <th scope="col">Usuário</th>
       <th scope="col">Staff</th>
       <th scope="col">Super</th>
       <th scope="col">Ativo</th>
