--- a/src/app/management/user/components/user-details/user-details.component.html
+++ b/src/app/management/user/components/user-details/user-details.component.html
@@ -39,7 +39,7 @@
   </div>
   <div class="user-details__input">
     <label for="username" class="form-label">Usuário</label>
-    <input type="text" formControlName="username" class="form-control" id="username" placeholder="carlinhos123" />
+    <input type="text" formControlName="username" class="form-control" id="username" placeholder="usuario123" />
     <div *ngIf="isFormFieldInvalid(form, 'username')" class="invalid-feedback">
       {{ applicationMessages.requiredField }}
     </div>
