--- a/src/app/management/profile/components/profile-details/profile-details.component.html
+++ b/src/app/management/profile/components/profile-details/profile-details.component.html
@@ -18,7 +18,7 @@
   </div>
   <div class="profile-details__input">
     <label for="description" class="form-label">Descrição</label>
-    <input type="text" formControlName="description" class="form-control" id="description" placeholder="Carlos" />
+    <input type="text" formControlName="description" class="form-control" id="description" placeholder="Perfil 1" />
     <div *ngIf="isFormFieldInvalid(form, 'description')" class="invalid-feedback">
       {{ applicationMessages.requiredField }}
     </div>
