Change to new logo

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/home"><img src="../../../assets/img/logo.png" alt="Application logo" /></a>
+    <a class="navbar-brand" routerLink="/home"
+      ><img src="../../../assets/img/logo-color@3x.png" alt="Application logo"
+    /></a>
     <button
       class="navbar-toggler"
       type="button"
